--- a/src/index.html
+++ b/src/index.html
@@ -582,7 +582,7 @@
           </div>
         </div>
         <div class="siteMap-contents">
-          <div class="siteMap-content">
+          <div class="siteMap-content siteMap-content--order1">
             <ul class="siteMap-main">
               <li class="siteMap-main-title">キャンペーン</li>
               <ul class="siteMap-sub">
@@ -593,7 +593,7 @@
               <li class="siteMap-main-title">私たちについて</li>
             </ul>
           </div>
-          <div class="siteMap-content">
+          <div class="siteMap-content siteMap-content--order3">
             <ul class="siteMap-main">
               <li class="siteMap-main-title">お客様の声</li>
               <li class="siteMap-main-title">料金一覧</li>
@@ -604,7 +604,7 @@
               </ul>
             </ul>
           </div>
-          <div class="siteMap-content">
+          <div class="siteMap-content siteMap-content--order2">
             <ul class="siteMap-main">
               <li class="siteMap-main-title">ダイビング情報</li>
               <ul class="siteMap-sub">
@@ -615,7 +615,7 @@
               <li class="siteMap-main-title">ブログ</li>
             </ul>
           </div>
-          <div class="siteMap-content">
+          <div class="siteMap-content siteMap-content--order4">
             <ul class="siteMap-main">
               <li class="siteMap-main-title">よくある質問</li>
               <li class="siteMap-main-title">プライバシー<br class="pc-none" />ポリシー</li>
