--- a/src/index.html
+++ b/src/index.html
@@ -112,8 +112,8 @@
         </div>
       </div>
       <div class="sp-nav">
-        <div class="inner">
-          <div class="siteMap-contents">
+        <div class="sp-nav-inner">
+          <div class="siteMap-contents siteMap-contents--header">
             <div class="siteMap-content">
               <ul class="siteMap-main">
                 <li class="siteMap-main-title">キャンペーン</li>
