--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
         </div>
       </div>
       <div class="FV-texts">
-        <p class="FV-main-text">DIVING</p>
+        <h1 class="FV-main-text">DIVING</h1>
         <p class="FV-sub-text">into the ocean</p>
       </div>
       <!--Campaign-->
@@ -539,7 +539,7 @@
           <div class="contact-wrapper">
             <div class="contact__address-wrapper">
               <div class="contact__info-wrapper">
-                <h1 class="logo logo--top-contact"><img src="./assets/images/common/contact-logo.png" alt="logo" /></h1>
+                <div class="logo logo--top-contact"><img src="./assets/images/common/contact-logo.png" alt="logo" /></div>
               </div>
               <div class="contact__info">
                 <div class="contact__address">
