--- a/src/index.html
+++ b/src/index.html
@@ -112,14 +112,14 @@
         </div>
       </div>
       <div class="sp-nav">
-        <div class="sp-nav-inner">
+        <div class="inner">
           <div class="siteMap-contents siteMap-contents--header">
             <div class="siteMap-content">
               <ul class="siteMap-main">
                 <li class="siteMap-main-title"><a href="#">キャンペーン</a></li>
                 <ul class="siteMap-sub">
                   <li class="siteMap-sub-title"><a href="#">ライセンス取得</a></li>
-                  <li class="siteMap-sub-title"><a href="#">>貸切体験ダイビング</a></li>
+                  <li class="siteMap-sub-title"><a href="#">貸切体験ダイビング</a></li>
                   <li class="siteMap-sub-title"><a href="#"></a>ナイトダイビング</a></li>
                 </ul>
                 <li class="siteMap-main-title"><a href="#"></a>私たちについて</a></li>
@@ -287,7 +287,7 @@
       </section>
       <!--About us-->
       <section class="top-about-us">
-        <div class="top-about-us-inner">
+        <div class="inner">
           <div class="section-title-wrapper">
             <p class="section-title-en"><span>A</span>bout us</p>
             <h2 class="section-title-jp">私たちについて</h2>
@@ -313,7 +313,7 @@
       </section>
       <!--Information-->
       <section class="top-information">
-        <div class="top-info-inner">
+        <div class="inner">
           <div class="section-title-wrapper">
             <p class="section-title-en"><span>I</span>nformation</p>
             <h2 class="section-title-jp">ダイビング情報</h2>
@@ -388,7 +388,7 @@
       </section>
       <!--Voice-->
       <section class="top-voice">
-        <div class="top-voice-inner">
+        <div class="inner">
           <div class="top-voice-decoration-upper"><img src="./assets/images/common/decoration-fish-right.svg" alt="decoration-fish" /></div>
           <div class="section-title-wrapper">
             <p class="section-title-en"><span>V</span>oice</p>
@@ -445,7 +445,7 @@
       </section>
       <!--price-->
       <section class="top-price">
-        <div class="top-price-inner">
+        <div class="inner">
           <div class="section-title-wrapper">
             <p class="section-title-en"><span>P</span>rice</p>
             <h2 class="section-title-jp">料金一覧</h2>
@@ -573,7 +573,7 @@
       <div id="scroll-top">
         <a href="#"><img src="./assets/images/common/scroll-top.svg" alt="上へ戻る" /></a>
       </div>
-      <div class="footer-inner">
+      <div class="inner">
         <div class="footer-icons">
           <div class="footer-logo"><a href="#"><img src="./assets/images/common/logo.png" alt="logo" /></a></div>
           <div class="footer-sns-logos">
