--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@
         <div class="inner">
           <div class="top-campaign-swiper-button-relative">
             <div class="section-title-wrapper">
-              <p class="section-title-en"><span>C</span>ampaign</p>
+              <p class="section-title-en">Campaign</p>
               <h2 class="section-title-jp">キャンペーン</h2>
             </div>
             <div class="top-swiper-button-wrapper">
@@ -299,7 +299,7 @@
       <section class="top-about-us">
         <div class="inner">
           <div class="section-title-wrapper">
-            <p class="section-title-en"><span>A</span>bout us</p>
+            <p class="section-title-en">About us</p>
             <h2 class="section-title-jp">私たちについて</h2>
           </div>
           <div class="top-about-us__img-wrapper">
@@ -314,7 +314,7 @@
             <div class="about-us__texts">
               <p class="about-us__main-text">Dive into<br />the Ocean</p>
               <div class="about-us__text">
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                 <div class="btn-wrapper btn-wrapper--about">
                   <a href="#" class="btn"
                     >View more
@@ -332,7 +332,7 @@
       <section class="top-information">
         <div class="inner">
           <div class="section-title-wrapper">
-            <p class="section-title-en"><span>I</span>nformation</p>
+            <p class="section-title-en">Information</p>
             <h2 class="section-title-jp">ダイビング情報</h2>
             <div class="info-wrapper">
               <div class="info__img colorbox"><img src="./assets/images/common/information.png" alt="fish-and-sea" /></div>
@@ -358,7 +358,7 @@
         <div class="inner">
           <div class="top-blog-decoration"><img src="./assets/images/common/decoration-fish-white.png" alt="decoration-fish" /></div>
           <div class="section-title-wrapper">
-            <p class="section-title-en section-title-en--white"><span>B</span>log</p>
+            <p class="section-title-en section-title-en--white">Blog</p>
             <h2 class="section-title-jp section-title-jp--white">ブログ</h2>
           </div>
           <div class="top-blog-cards-wrapper">
@@ -408,7 +408,7 @@
         <div class="inner">
           <div class="top-voice-decoration-upper"><img src="./assets/images/common/decoration-fish-right.svg" alt="decoration-fish" /></div>
           <div class="section-title-wrapper">
-            <p class="section-title-en"><span>V</span>oice</p>
+            <p class="section-title-en">Voice</p>
             <h2 class="section-title-jp">お客様の声</h2>
           </div>
           <div class="top-voice-card-wrapper">
@@ -464,7 +464,7 @@
       <section class="top-price">
         <div class="inner">
           <div class="section-title-wrapper">
-            <p class="section-title-en"><span>P</span>rice</p>
+            <p class="section-title-en">Price</p>
             <h2 class="section-title-jp">料金一覧</h2>
           </div>
           <div class="price-contents-wrapper">
@@ -570,7 +570,7 @@
             </div>
             <div class="contact__content">
               <div class="section-title-wrapper">
-                <p class="section-title-en section-title-en--big"><span>C</span>ontact</p>
+                <p class="section-title-en section-title-en--big">Contact</p>
                 <h2 class="section-title-jp section-title-jp--shadow">お問い合わせ</h2>
                 <p class="contact-text">ご予約・お問い合わせはコチラ</p>
                 <div class="btn-wrapper btn-wrapper--in-content">
@@ -588,7 +588,7 @@
     <!--footer-->
     <footer class="footer" id="footer">
       <div id="scroll-top">
-        <a href="#"><img src="./assets/images/common/scroll-top.svg" alt="上へ戻る" /></a>
+        <a href="#"><img src="./assets/images/common/scroll-top.png" alt="上へ戻る" /></a>
       </div>
       <div class="inner">
         <div class="footer-icons">
@@ -606,8 +606,8 @@
         </div>
         <div class="siteMap-contents">
           <div class="siteMap-content siteMap-content--order1">
-            <ul class="siteMap-main">
-              <li class="siteMap-main-title"><a href="#">キャンペーン</a></li>
+            <div class="siteMap-main">
+              <div class="siteMap-main-title"><a href="#">キャンペーン</a></div>
               <div class="siteMap-sub">
                 <ul>
                   <li class="siteMap-sub-title"><a href="#">ライセンス取得</a></li>
@@ -616,12 +616,12 @@
                 </ul>
               </div>
               <li class="siteMap-main-title"><a href="#">私たちについて</a></li>
-            </ul>
+            </div>
           </div>
           <div class="siteMap-content siteMap-content--order3">
-            <ul class="siteMap-main">
-              <li class="siteMap-main-title"><a href="#">お客様の声</a></li>
-              <li class="siteMap-main-title"><a href="#">料金一覧</a></li>
+            <div class="siteMap-main">
+              <div class="siteMap-main-title"><a href="#">お客様の声</a></div>
+              <div class="siteMap-main-title"><a href="#">料金一覧</a></div>
               <div class="siteMap-sub">
                 <ul>
                   <li class="siteMap-sub-title"><a href="#">ライセンス講習</a></li>
@@ -629,11 +629,11 @@
                   <li class="siteMap-sub-title"><a href="#">ファンダイビング</a></li>
                 </ul>
               </div>
-            </ul>
+            </div>
           </div>
           <div class="siteMap-content siteMap-content--order2">
-            <ul class="siteMap-main">
-              <li class="siteMap-main-title"><a href="#">ダイビング情報</a></li>
+            <div class="siteMap-main">
+              <div class="siteMap-main-title"><a href="#">ダイビング情報</a></div>
               <div class="siteMap-sub">
                 <ul>
                   <li class="siteMap-sub-title"><a href="#">ライセンス講習</a></li>
@@ -642,7 +642,7 @@
                 </ul>
               </div>
               <li class="siteMap-main-title"><a href="#">ブログ</a></li>
-            </ul>
+            </div>
           </div>
           <div class="siteMap-content siteMap-content--order4">
             <ul class="siteMap-main">
