--- a/src/index.html
+++ b/src/index.html
@@ -115,8 +115,8 @@
         <div class="inner">
           <div class="siteMap-contents siteMap-contents--header">
             <div class="siteMap-content">
-              <ul class="siteMap-main">
-                <li class="siteMap-main-title"><a href="#">キャンペーン</a></li>
+              <div class="siteMap-main">
+                <div class="siteMap-main-title"><a href="#">キャンペーン</a></div>
                 <div class="siteMap-sub">
                   <ul>
                     <li class="siteMap-sub-title"><a href="#">ライセンス取得</a></li>
@@ -124,13 +124,13 @@
                     <li class="siteMap-sub-title"><a href="#">ナイトダイビング</a></li>
                   </ul>
                 </div>
-                <li class="siteMap-main-title"><a href="#">私たちについて</a></li>
-              </ul>
+                <div class="siteMap-main-title"><a href="#">私たちについて</a></div>
+              </div>
             </div>
             <div class="siteMap-content">
-              <ul class="siteMap-main">
-                <li class="siteMap-main-title"><a href="#">お客様の声</a></li>
-                <li class="siteMap-main-title"><a href="#">料金一覧</a></li>
+              <div class="siteMap-main">
+                <div class="siteMap-main-title"><a href="#">お客様の声</a></div>
+                <div class="siteMap-main-title"><a href="#">料金一覧</a></div>
                 <div class="siteMap-sub">
                   <ul>
                     <li class="siteMap-sub-title"><a href="#">ライセンス講習</a></li>
@@ -138,11 +138,11 @@
                     <li class="siteMap-sub-title"><a href="#">ファンダイビング</a></li>
                   </ul>
                 </div>
-              </ul>
+              </div>
             </div>
             <div class="siteMap-content">
-              <ul class="siteMap-main">
-                <li class="siteMap-main-title"><a href="#">ダイビング情報</a></li>
+              <div class="siteMap-main">
+                <div class="siteMap-main-title"><a href="#">ダイビング情報</a></div>
                 <div class="siteMap-sub">
                   <ul>
                     <li class="siteMap-sub-title"><a href="#">ライセンス講習</a></li>
@@ -150,8 +150,8 @@
                     <li class="siteMap-sub-title"><a href="#">ファンダイビング</a></li>
                   </ul>
                 </div>
-                <li class="siteMap-main-title"><a href="#">ブログ</a></li>
-              </ul>
+                <div class="siteMap-main-title"><a href="#">ブログ</a></div>
+              </div>
             </div>
             <div class="siteMap-content">
               <ul class="siteMap-main">
@@ -615,7 +615,7 @@
                   <li class="siteMap-sub-title"><a href="#">ナイトダイビング</a></li>
                 </ul>
               </div>
-              <li class="siteMap-main-title"><a href="#">私たちについて</a></li>
+              <div class="siteMap-main-title"><a href="#">私たちについて</a></div>
             </div>
           </div>
           <div class="siteMap-content siteMap-content--order3">
@@ -641,7 +641,7 @@
                   <li class="siteMap-sub-title"><a href="#">ファンダイビング</a></li>
                 </ul>
               </div>
-              <li class="siteMap-main-title"><a href="#">ブログ</a></li>
+              <div class="siteMap-main-title"><a href="#">ブログ</a></div>
             </div>
           </div>
           <div class="siteMap-content siteMap-content--order4">
