--- a/src/index.html
+++ b/src/index.html
@@ -286,12 +286,12 @@
               </a>
             </div>
           </div>
-        </div>
-        <div class="btn-wrapper btn-wrapper--campaign">
-          <a href="#" class="btn"
-            >View more
-            <span></span>
-          </a>
+          <div class="btn-wrapper btn-wrapper--campaign">
+            <a href="#" class="btn"
+              >View more
+              <span></span>
+            </a>
+          </div>
         </div>
         <!--inner閉じタグ-->
       </section>
@@ -329,13 +329,13 @@
         <!--inner閉じタグ-->
       </section>
       <!--Information-->
-      <section class="top-information">
+      <section class="top-info">
         <div class="inner">
           <div class="section-title-wrapper">
             <p class="section-title-en">Information</p>
             <h2 class="section-title-jp">ダイビング情報</h2>
-            <div class="info-wrapper">
-              <div class="info__img colorbox"><img src="./assets/images/common/information.png" alt="fish-and-sea" /></div>
+            <div class="top-info-wrapper">
+              <div class="top-info__img colorbox"><img src="./assets/images/common/information.png" alt="fish-and-sea" /></div>
               <div class="info__content">
                 <h3 class="title title--info">ライセンス講習</h3>
                 <div class="info-text">
@@ -362,8 +362,8 @@
             <h2 class="section-title-jp section-title-jp--white">ブログ</h2>
           </div>
           <div class="top-blog-cards-wrapper">
-            <div class="cards">
-              <a href="#" class="card card--blog">
+            <div class="cards cards--3cards">
+              <a href="#" class="card">
                 <figure class="card__img">
                   <img src="./assets/images/common/blog1.png" alt="coral" />
                 </figure>
@@ -373,7 +373,7 @@
                   <div class="card__contents">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
                 </div>
               </a>
-              <a href="#" class="card card--blog">
+              <a href="#" class="card">
                 <figure class="card__img">
                   <img src="./assets/images/common/blog2.png" alt="sea-turtle" />
                 </figure>
@@ -383,7 +383,7 @@
                   <div class="card__contents">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</div>
                 </div>
               </a>
-              <a href="#" class="card card--blog">
+              <a href="#" class="card">
                 <figure class="card__img">
                   <img src="./assets/images/common/blog3.png" alt="fish" />
                 </figure>
