--- a/src/index.html
+++ b/src/index.html
@@ -364,7 +364,7 @@
           <div class="top-blog-cards-wrapper">
             <div class="cards cards--3cards">
               <a href="#" class="card">
-                <figure class="card__img">
+                <figure class="card__img card__img--blog">
                   <img src="./assets/images/common/blog1.png" alt="coral" />
                 </figure>
                 <div class="card__body card__body--blog">
@@ -374,7 +374,7 @@
                 </div>
               </a>
               <a href="#" class="card">
-                <figure class="card__img">
+                <figure class="card__img card__img--blog">
                   <img src="./assets/images/common/blog2.png" alt="sea-turtle" />
                 </figure>
                 <div class="card__body card__body--blog">
@@ -384,7 +384,7 @@
                 </div>
               </a>
               <a href="#" class="card">
-                <figure class="card__img">
+                <figure class="card__img card__img--blog">
                   <img src="./assets/images/common/blog3.png" alt="fish" />
                 </figure>
                 <div class="card__body card__body--blog">
@@ -461,81 +461,81 @@
         <div class="top-voice-decoration-under"><img src="./assets/images/common/decoration-dragon-fish.png" alt="decoration-dragon-fish" /></div>
       </section>
       <!--price-->
-      <section class="top-price">
+      <section class="top-price-section">
         <div class="inner">
           <div class="section-title-wrapper">
             <p class="section-title-en">Price</p>
             <h2 class="section-title-jp">料金一覧</h2>
           </div>
-          <div class="price-contents-wrapper">
-            <picture class="price-img colorbox">
+          <div class="top-price-contents-wrapper">
+            <picture class="top-price-img colorbox">
               <source srcset="./assets/images/common/price-pc.png" media="(min-width: 768px)" type="image/jpg" />
               <source srcset="./assets/images/common/price-sp.png" media="(max-width: 767px)" type="image/png" />
               <img src="./assets/images/common/price-sp.png" alt="sea-turtle " />
             </picture>
-            <div class="price-contents">
-              <dl class="price-content">
+            <div class="top-price-contents">
+              <dl class="top-price-content">
                 <dt class="title title--price">ライセンス講習</dt>
-                <dd class="price-menus">
-                  <div class="price-menu">オープンウォーターダイバーコース</div>
-                  <div class="price">¥50,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">オープンウォーターダイバーコース</div>
+                  <div class="top-price">¥50,000</div>
                 </dd>
-                <dd class="price-menus">
-                  <div class="price-menu">アドバンスドオープンウォーターコース</div>
-                  <div class="price">¥60,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">アドバンスドオープンウォーターコース</div>
+                  <div class="top-price">¥60,000</div>
                 </dd>
-                <dd class="price-menus">
-                  <div class="price-menu">レスキュー＋EFRコース</div>
-                  <div class="price">¥70,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">レスキュー＋EFRコース</div>
+                  <div class="top-price">¥70,000</div>
                 </dd>
               </dl>
-              <dl class="price-content">
+              <dl class="top-price-content">
                 <dt class="title title--price">体験ダイビング</dt>
-                <dd class="price-menus">
-                  <div class="price-menu">ビーチ体験ダイビング(半日)</div>
-                  <div class="price">¥7,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">ビーチ体験ダイビング(半日)</div>
+                  <div class="top-price">¥7,000</div>
                 </dd>
-                <dd class="price-menus">
-                  <div class="price-menu">ビーチ体験ダイビング(1日)</div>
-                  <div class="price">¥14,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">ビーチ体験ダイビング(1日)</div>
+                  <div class="top-price">¥14,000</div>
                 </dd>
-                <dd class="price-menus">
-                  <div class="price-menu">ボート体験ダイビング(半日)</div>
-                  <div class="price">¥10,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">ボート体験ダイビング(半日)</div>
+                  <div class="top-price">¥10,000</div>
                 </dd>
-                <dd class="price-menus">
-                  <div class="price-menu">ボート体験ダイビング(1日)</div>
-                  <div class="price">¥18,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">ボート体験ダイビング(1日)</div>
+                  <div class="top-price">¥18,000</div>
                 </dd>
               </dl>
-              <dl class="price-content">
+              <dl class="top-price-content">
                 <dt class="title title--price">ファンダイビング</dt>
-                <dd class="price-menus">
-                  <div class="price-menu">ビーチダイビング(2ダイブ)</div>
-                  <div class="price">¥14,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">ビーチダイビング(2ダイブ)</div>
+                  <div class="top-price">¥14,000</div>
                 </dd>
-                <dd class="price-menus">
-                  <div class="price-menu">ボートダイビング(2ダイブ)</div>
-                  <div class="price">¥18,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">ボートダイビング(2ダイブ)</div>
+                  <div class="top-price">¥18,000</div>
                 </dd>
-                <dd class="price-menus">
-                  <div class="price-menu">スペシャルダイビング(2ダイブ)</div>
-                  <div class="price">¥24,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">スペシャルダイビング(2ダイブ)</div>
+                  <div class="top-price">¥24,000</div>
                 </dd>
-                <dd class="price-menus">
-                  <div class="price-menu">ナイトダイビング(1ダイブ)</div>
-                  <div class="price">¥10,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">ナイトダイビング(1ダイブ)</div>
+                  <div class="top-price">¥10,000</div>
                 </dd>
               </dl>
-              <dl class="price-content">
+              <dl class="top-price-content">
                 <dt class="title title--price">スペシャルダイビング</dt>
-                <dd class="price-menus">
-                  <div class="price-menu">貸切ダイビング(2ダイブ)</div>
-                  <div class="price">¥24,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">貸切ダイビング(2ダイブ)</div>
+                  <div class="top-price">¥24,000</div>
                 </dd>
-                <dd class="price-menus">
-                  <div class="price-menu">1日ダイビング(3ダイブ)</div>
-                  <div class="price">¥32,000</div>
+                <dd class="top-price-menus">
+                  <div class="top-price-menu">1日ダイビング(3ダイブ)</div>
+                  <div class="top-price">¥32,000</div>
                 </dd>
               </dl>
             </div>
@@ -550,9 +550,9 @@
         </div>
       </section>
       <!--contact-->
-      <section class="top-contact">
+      <section class="contact">
         <div class="inner">
-          <div class="top-contact-decoration"><img src="./assets/images/common/decoration-fish.png" alt="decoration-fish" /></div>
+          <div class="contact-decoration"><img src="./assets/images/common/decoration-fish.png" alt="decoration-fish" /></div>
           <div class="contact-wrapper">
             <div class="contact__address-wrapper">
               <div class="contact__info-wrapper">
