--- a/src/index.html
+++ b/src/index.html
@@ -114,8 +114,8 @@
       <div class="sp-nav">
         <div class="inner">
           <div class="siteMap-contents siteMap-contents--header">
-            <div class="siteMap-content">
-              <div class="siteMap-main">
+            <div class="siteMap__sp-layout">
+              <div class="siteMap-content">
                 <div class="siteMap-main-title"><a href="#">キャンペーン</a></div>
                 <div class="siteMap-sub">
                   <ul>
@@ -126,8 +126,6 @@
                 </div>
                 <div class="siteMap-main-title"><a href="#">私たちについて</a></div>
               </div>
-            </div>
-            <div class="siteMap-content">
               <div class="siteMap-main">
                 <div class="siteMap-main-title"><a href="#">お客様の声</a></div>
                 <div class="siteMap-main-title"><a href="#">料金一覧</a></div>
@@ -140,7 +138,7 @@
                 </div>
               </div>
             </div>
-            <div class="siteMap-content">
+            <div class="siteMap__sp-layout">
               <div class="siteMap-main">
                 <div class="siteMap-main-title"><a href="#">ダイビング情報</a></div>
                 <div class="siteMap-sub">
@@ -152,8 +150,6 @@
                 </div>
                 <div class="siteMap-main-title"><a href="#">ブログ</a></div>
               </div>
-            </div>
-            <div class="siteMap-content">
               <ul class="siteMap-main">
                 <li class="siteMap-main-title"><a href="#">よくある質問</a></li>
                 <li class="siteMap-main-title">
@@ -206,8 +202,8 @@
               <h2 class="section-title-jp">キャンペーン</h2>
             </div>
             <div class="top-swiper-button-wrapper">
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-button-next"></div>
+              <div class="top-swiper-button-prev"></div>
+              <div class="top-swiper-button-next"></div>
             </div>
           </div>
           <div class="swiper topCampaignSwiper" id="topCampaignSwiper">
@@ -218,14 +214,16 @@
                 </figure>
                 <div class="card__body card__body--campaign">
                   <div class="card__category">ライセンス講習</div>
-                  <div class="title-wrapper">
-                    <h3 class="title">ライセンス取得</h3>
-                  </div>
-                  <div class="card__contents">
-                    <p class="campaign-text">全部コミコミ(お一人様)</p>
-                    <div class="campaign-price-wrapper">
-                      <p class="campaign-pre-price">¥56,000</p>
-                      <p class="campaign-after-price">¥46,000</p>
+                  <div class="card__arrange">
+                    <div class="title-wrapper">
+                      <h3 class="title">ライセンス取得</h3>
+                    </div>
+                    <div class="card__contents">
+                      <p class="campaign-text">全部コミコミ(お一人様)</p>
+                      <div class="campaign-price-wrapper">
+                        <p class="campaign-pre-price">¥56,000</p>
+                        <p class="campaign-after-price">¥46,000</p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -236,14 +234,16 @@
                 </figure>
                 <div class="card__body card__body--campaign">
                   <div class="card__category">体験ダイビング</div>
-                  <div class="title-wrapper">
-                    <h3 class="title">貸切体験ダイビング</h3>
-                  </div>
-                  <div class="card__contents">
-                    <p class="campaign-text">全部コミコミ(お一人様)</p>
-                    <div class="campaign-price-wrapper">
-                      <p class="campaign-pre-price">¥24,000</p>
-                      <p class="campaign-after-price">¥18,000</p>
+                  <div class="card__arrange">
+                    <div class="title-wrapper">
+                      <h3 class="title">貸切体験ダイビング</h3>
+                    </div>
+                    <div class="card__contents">
+                      <p class="campaign-text">全部コミコミ(お一人様)</p>
+                      <div class="campaign-price-wrapper">
+                        <p class="campaign-pre-price">¥24,000</p>
+                        <p class="campaign-after-price">¥18,000</p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -254,14 +254,16 @@
                 </figure>
                 <div class="card__body card__body--campaign">
                   <div class="card__category">体験ダイビング</div>
-                  <div class="title-wrapper">
-                    <h3 class="title">ナイトダイビング</h3>
-                  </div>
-                  <div class="card__contents">
-                    <p class="campaign-text">全部コミコミ(お一人様)</p>
-                    <div class="campaign-price-wrapper">
-                      <p class="campaign-pre-price">¥10,000</p>
-                      <p class="campaign-after-price">¥8,000</p>
+                  <div class="card__arrange">
+                    <div class="title-wrapper">
+                      <h3 class="title">ナイトダイビング</h3>
+                    </div>
+                    <div class="card__contents">
+                      <p class="campaign-text">全部コミコミ(お一人様)</p>
+                      <div class="campaign-price-wrapper">
+                        <p class="campaign-pre-price">¥10,000</p>
+                        <p class="campaign-after-price">¥8,000</p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -272,14 +274,16 @@
                 </figure>
                 <div class="card__body card__body--campaign">
                   <div class="card__category">ファンダイビング</div>
-                  <div class="title-wrapper">
-                    <h3 class="title">貸切ファンダイビング</h3>
-                  </div>
-                  <div class="card__contents">
-                    <p class="campaign-text">全部コミコミ(お一人様)</p>
-                    <div class="campaign-price-wrapper">
-                      <p class="campaign-pre-price">¥20,000</p>
-                      <p class="campaign-after-price">¥16,000</p>
+                  <div class="card__arrange">
+                    <div class="title-wrapper">
+                      <h3 class="title">貸切ファンダイビング</h3>
+                    </div>
+                    <div class="card__contents">
+                      <p class="campaign-text">全部コミコミ(お一人様)</p>
+                      <div class="campaign-price-wrapper">
+                        <p class="campaign-pre-price">¥20,000</p>
+                        <p class="campaign-after-price">¥16,000</p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -311,9 +315,9 @@
                 <img src="./assets/images/common/about-us-right.png" alt="yellow-fish" />
               </div>
             </div>
-            <div class="about-us__texts">
-              <p class="about-us__main-text">Dive into<br />the Ocean</p>
-              <div class="about-us__text">
+            <div class="top-about-us__texts">
+              <p class="top-about-us__main-text">Dive into<br />the Ocean</p>
+              <div class="top-about-us__text">
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                 <div class="btn-wrapper btn-wrapper--about">
                   <a href="#" class="btn"
@@ -605,8 +609,8 @@
           </div>
         </div>
         <div class="siteMap-contents">
-          <div class="siteMap-content siteMap-content--order1">
-            <div class="siteMap-main">
+          <div class="siteMap__sp-layout">
+            <div class="siteMap-content">
               <div class="siteMap-main-title"><a href="#">キャンペーン</a></div>
               <div class="siteMap-sub">
                 <ul>
@@ -617,8 +621,6 @@
               </div>
               <div class="siteMap-main-title"><a href="#">私たちについて</a></div>
             </div>
-          </div>
-          <div class="siteMap-content siteMap-content--order3">
             <div class="siteMap-main">
               <div class="siteMap-main-title"><a href="#">お客様の声</a></div>
               <div class="siteMap-main-title"><a href="#">料金一覧</a></div>
@@ -631,7 +633,7 @@
               </div>
             </div>
           </div>
-          <div class="siteMap-content siteMap-content--order2">
+          <div class="siteMap__sp-layout">
             <div class="siteMap-main">
               <div class="siteMap-main-title"><a href="#">ダイビング情報</a></div>
               <div class="siteMap-sub">
@@ -643,8 +645,6 @@
               </div>
               <div class="siteMap-main-title"><a href="#">ブログ</a></div>
             </div>
-          </div>
-          <div class="siteMap-content siteMap-content--order4">
             <ul class="siteMap-main">
               <li class="siteMap-main-title"><a href="#">よくある質問</a></li>
               <li class="siteMap-main-title">
